# NucSeqOptimizer

./: .gitignore  =0.8  README.md  pyproject.toml
examples/: test_input.yaml
outputs/: input.fasta
outputs/run_20250812_141330/: pred.model_idx_0.cif  scores.model_idx_0.npz
scripts/: make_fasta_and_run.py
